few fixes to the historical py script
and images for website

--- a/drafts/alberto/flighthistoricalinformation.ipynb
+++ b/drafts/alberto/flighthistoricalinformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# IMPORT FILE PATHS \n",
-    "active_project = \"../rawdata/iahhist/\"\n",
+    "active_project = \"../rawdata/iahhist_mf/\"\n",
     "\n",
     "file_paths = glob.glob(os.path.join(active_project, \"*.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,12 +96,15 @@
     "    raw_header = raw_table.iloc[0]\n",
     "    raw_table.columns = raw_header  # Set the new header\n",
     "    raw_table = raw_table.iloc[1:]  # Remove the first row\n",
+    "    #raw_table = raw_table.apply(lambda x: x.str.strip('\"'))\n",
+    "    #raw_table[\"Date (MM/DD/YYYY)\"] = pd.to_datetime(raw_table[\"Date (MM/DD/YYYY)\"])\n",
+    "    #raw_table = raw_table[raw_table[\"Date (MM/DD/YYYY)\"].dt.year > 2012]\n",
     "    return raw_table "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,26 +119,20 @@
     "        df = valid_dfs[i]  # Retrieve the DataFrame by index\n",
     "        modified_df = modify_in_df(df) # use this step to Modify the DataFrame\n",
     "        modified_df_list.append(modified_df)  # Append the modified DataFrame to the list\n",
+    "        # Generate CSV file for the modified DataFrame\n",
+    "        # filename = f\"modified_df_{i}.csv\"\n",
+    "        #modified_df.to_csv(filename, index=False)\n",
     "    except Exception as e:\n",
     "        error_log.append((i, str(e)))  # Log the index and error message"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "big_df = pd.concat(modified_df_list, ignore_index=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "big_df = big_df.apply(lambda x: x.str.strip('\"'))"
    ]
   }
  ],
