--- a/drafts/maura/Hoteldata.ipynb
+++ b/drafts/maura/Hoteldata.ipynb
@@ -349,7 +349,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#open the saved CSV\n",
     "airports1 = pd.read_csv(r\"CSV\\Airportnames\")\n",
+    "#delete extra rows \n",
     "del airports1[\"Unnamed: 0\"]\n",
     "del airports1[\"Hotel Distance\"]"
    ]
@@ -562,6 +564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#have user input geoapify key \n",
     "geoapify_key = input(\"what is your geoapify key?\")\n"
    ]
   },
@@ -571,9 +574,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#create a list to hold the hotel name and address\n",
     "hotel_name = []\n",
     "hotel_address = []\n",
     "\n",
+    "#loop through the cities and the closest hotels \n",
     "for x in range(143):\n",
     "    latitude= airports1[\"Lat\"][x]\n",
     "    longitude = airports1[\"Long\"][x]\n",
@@ -608,6 +613,7 @@
     "        hotel_name.append(hotel[\"features\"][0][\"properties\"][\"address_line1\"])\n",
     "        hotel_address.append(hotel[\"features\"][0][\"properties\"][\"address_line2\"])\n",
     "        # airports.loc[index, \"distance\"] = int(hotel[\"features\"][0][\"properties\"][\"distance\"])\n",
+    "    #if there is not an airport found with the criteria then add NAN to list\n",
     "    except (KeyError, IndexError):\n",
     "        # If no hotel or address is found append list with NAN\n",
     "        hotel_name.append(np.nan)\n",
@@ -860,7 +866,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#add results to the DF and export \n",
     "airports1[\"Hotel Name\"]= hotel_name\n",
     "airports1[\"Hotel Address\"]= hotel_address\n",
     "airports1.to_csv(\"CSV/Hotels.csv\")\n",
