--- a/drafts/maura/project3 - Copy.ipynb
+++ b/drafts/maura/project3 - Copy.ipynb
@@ -165,7 +165,7 @@
     "        #wait for it to download \n",
     "        time.sleep(20)\n",
     "        #CHANGE FOR YOUR DOWNLOAD PATH \n",
-    "        download_dir = r\"C:\\Users\\memel\\Downloads\"\n",
+    "        download_dir = r\"C:\\..\\..\\Downloads\"\n",
     "        file_name = \"Detailed_Statistics_Departures.csv\"\n",
     "        file_path = os.path.join(download_dir, file_name)\n",
     "    \n",
