--- a/drafts/rawdata/clean/mongodb.ipynb
+++ b/drafts/rawdata/clean/mongodb.ipynb
@@ -40,6 +40,27 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "55221849",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymongo.mongo_client import MongoClient\n",
+    "from pymongo.server_api import ServerApi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8cf2b776",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uri = \"mongodb+srv://admin:AyKl0LR7ZyYwc9FR@flightdelay0.xkb2gjb.mongodb.net/?retryWrites=true&w=majority\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "d8f60bc1",
    "metadata": {},
    "outputs": [],
@@ -50,7 +71,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "id": "292f17a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pinged your deployment. You successfully connected to MongoDB!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a new client and connect to the server\n",
+    "client = MongoClient(uri, server_api=ServerApi('1'))\n",
+    "# Send a ping to confirm a successful connection\n",
+    "try:\n",
+    "    client.admin.command('ping')\n",
+    "    print(\"Pinged your deployment. You successfully connected to MongoDB!\")\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "cdcc470a",
    "metadata": {},
    "outputs": [
@@ -69,8 +115,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "5029676e",
+   "execution_count": 7,
+   "id": "29c441bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,26 +126,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "5029676e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# assign the uk_food database to a variable name\n",
+    "import csv \n",
+    "\n",
+    "carrier_key_table = db[\"carrier_key_table\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
+   "id": "00eb693d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('carrier_key_table.csv', 'r') as csvfile:\n",
+    "    csv_data = csv.DictReader(csvfile)\n",
+    "    for row in csv_data:\n",
+    "        carrier_key_table.insert_one(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "de1bbd97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_current = db[\"raw_current\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b6afda50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('raw_current.csv', 'r') as csvfile:\n",
+    "    csv_data = csv.DictReader(csvfile)\n",
+    "    for row in csv_data:\n",
+    "        raw_current.insert_one(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6ebe8d47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_past = db[\"raw_past\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39e99280",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('raw_past.csv', 'r') as csvfile:\n",
+    "    csv_data = csv.DictReader(csvfile)\n",
+    "    for row in csv_data:\n",
+    "        raw_past.insert_one(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f02ef698",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['raw_current',\n",
-       " 'us_airports',\n",
-       " 'us-airports',\n",
-       " 'carrier_key_table',\n",
-       " 'full_detail_airports',\n",
-       " 'raw_past']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# review the collections in our new database\n",
     "db.list_collection_names()"
@@ -107,7 +209,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "37d3adf7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "4d382917",
    "metadata": {},
    "outputs": [
@@ -115,9 +225,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ARR_DELAY': 1851,\n",
-      " 'CANCELLATION_CODE': 58.0,\n",
-      " 'CANCELLED': 8.0,\n",
+      "{'ARR_DELAY': 1537,\n",
+      " 'CANCELLATION_CODE': -6.0,\n",
+      " 'CANCELLED': 5.0,\n",
       " 'CARRIER_DELAY': '',\n",
       " 'DEP_DELAY': ' TX\"',\n",
       " 'DEST': 30194,\n",
@@ -127,12 +237,12 @@
       " 'DEST_CITY_NAME': 'DFW',\n",
       " 'DEST_STATE_NM': '\"Dallas/Fort Worth',\n",
       " 'DIVERTED': 0.0,\n",
-      " 'DIV_DISTANCE': 0.0,\n",
+      " 'DIV_DISTANCE': '',\n",
       " 'FL_DATE': '4/1/2022 12:00:00 AM',\n",
-      " 'LATE_AIRCRAFT_DELAY': 0.0,\n",
+      " 'LATE_AIRCRAFT_DELAY': '',\n",
       " 'MONTH': 4,\n",
-      " 'NAS_DELAY': 58.0,\n",
-      " 'OP_CARRIER_FL_NUM': 1474,\n",
+      " 'NAS_DELAY': '',\n",
+      " 'OP_CARRIER_FL_NUM': 2444,\n",
       " 'OP_UNIQUE_CARRIER': 'AA',\n",
       " 'ORIGIN': 'IAH',\n",
       " 'ORIGIN_AIRPORT_ID': 12266,\n",
@@ -141,15 +251,15 @@
       " 'ORIGIN_CITY_NAME': '\"Houston',\n",
       " 'ORIGIN_STATE_NM': ' TX\"',\n",
       " 'QUARTER': 2,\n",
-      " 'SECURITY_DELAY': 0.0,\n",
-      " 'TAIL_NUM': 'N341RW',\n",
-      " 'TAXI_IN': 1809,\n",
+      " 'SECURITY_DELAY': '',\n",
+      " 'TAIL_NUM': 'N119US',\n",
+      " 'TAXI_IN': 1453,\n",
       " 'TAXI_OUT': 'Texas',\n",
       " 'WEATHER_DELAY': 0.0,\n",
-      " 'WHEELS_OFF': 81.0,\n",
-      " 'WHEELS_ON': 15.0,\n",
+      " 'WHEELS_OFF': -5.0,\n",
+      " 'WHEELS_ON': 34.0,\n",
       " 'YEAR': 2022,\n",
-      " '_id': ObjectId('64ad8495bbde053c78324f92')}\n"
+      " '_id': ObjectId('64adf4251b088bde916dfd91')}\n"
      ]
     }
    ],
@@ -160,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "2710c934",
    "metadata": {},
    "outputs": [
@@ -168,8 +278,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Actual departure time': '15:58',\n",
-      " 'Actual elapsed time (Minutes)': 66,\n",
+      "{'Actual departure time': '07:08',\n",
+      " 'Actual elapsed time (Minutes)': 68,\n",
       " 'Carrier Code': 'AA',\n",
       " 'Date (MM/DD/YYYY)': '2013-01-01',\n",
       " 'Delay Carrier (Minutes)': 0,\n",
@@ -177,15 +287,15 @@
       " 'Delay National Aviation System (Minutes)': 0,\n",
       " 'Delay Security (Minutes)': 0,\n",
       " 'Delay Weather (Minutes)': 0,\n",
-      " 'Departure delay (Minutes)': -2,\n",
+      " 'Departure delay (Minutes)': 3,\n",
       " 'Destination Airport': 'DFW',\n",
-      " 'Flight Number': 472,\n",
-      " 'Scheduled departure time': '16:00',\n",
-      " 'Scheduled elapsed time (Minutes)': 75,\n",
-      " 'Tail Number': 'N514AA',\n",
+      " 'Flight Number': 1732,\n",
+      " 'Scheduled departure time': '07:05',\n",
+      " 'Scheduled elapsed time (Minutes)': 70,\n",
+      " 'Tail Number': 'N543AA',\n",
       " 'Taxi-Out time (Minutes)': 18,\n",
-      " 'Wheels-off time': '16:16',\n",
-      " '_id': ObjectId('64ad84c45d4f3a2977b68db7')}\n"
+      " 'Wheels-off time': '07:26',\n",
+      " '_id': ObjectId('64adf431f7c835dbed4bbd5e')}\n"
      ]
     }
    ],
@@ -196,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "e7e3d8d7",
    "metadata": {},
    "outputs": [
@@ -204,30 +314,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('64ad870628bd393e1fe088da'),\n",
+      "{'_id': ObjectId('64adf4706ebcc37acfa22e14'),\n",
       " 'continent': 'NA',\n",
       " 'country_name': 'United States',\n",
-      " 'elevation_ft': 125,\n",
-      " 'gps_code': 'KLAX',\n",
-      " 'home_link': 'https://www.flylax.com/',\n",
-      " 'iata_code': 'LAX',\n",
-      " 'id': 3632,\n",
-      " 'ident': 'KLAX',\n",
+      " 'elevation_ft': 672,\n",
+      " 'gps_code': 'KORD',\n",
+      " 'home_link': 'https://www.flychicago.com/ohare/home/pages/default.aspx',\n",
+      " 'iata_code': 'ORD',\n",
+      " 'id': 3754,\n",
+      " 'ident': 'KORD',\n",
       " 'iso_country': 'US',\n",
-      " 'iso_region': 'US-CA',\n",
-      " 'keywords': '',\n",
-      " 'last_updated': '2023-05-20T21:11:41+00:00',\n",
-      " 'latitude_deg': 33.942501,\n",
-      " 'local_code': 'LAX',\n",
-      " 'local_region': 'CA',\n",
-      " 'longitude_deg': -118.407997,\n",
-      " 'municipality': 'Los Angeles',\n",
-      " 'name': 'Los Angeles / Tom Bradley International Airport',\n",
-      " 'region_name': 'California',\n",
+      " 'iso_region': 'US-IL',\n",
+      " 'keywords': 'CHI, Orchard Place',\n",
+      " 'last_updated': '2018-09-16T02:35:35+00:00',\n",
+      " 'latitude_deg': 41.9786,\n",
+      " 'local_code': 'ORD',\n",
+      " 'local_region': 'IL',\n",
+      " 'longitude_deg': -87.9048,\n",
+      " 'municipality': 'Chicago',\n",
+      " 'name': \"Chicago O'Hare International Airport\",\n",
+      " 'region_name': 'Illinois',\n",
       " 'scheduled_service': 1,\n",
-      " 'score': 1335475,\n",
+      " 'score': 1503175,\n",
       " 'type': 'large_airport',\n",
-      " 'wikipedia_link': 'https://en.wikipedia.org/wiki/Los_Angeles_International_Airport'}\n"
+      " 'wikipedia_link': \"https://en.wikipedia.org/wiki/O'Hare_International_Airport\"}\n"
      ]
     }
    ],
@@ -238,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "2cd6e3b7",
    "metadata": {},
    "outputs": [
@@ -251,7 +361,7 @@
       " 'Headquarter City': 'Minneapolis',\n",
       " 'Nearest Base': 'ATL',\n",
       " 'Nearest Base City': 'Atlanta',\n",
-      " '_id': ObjectId('64ad836c27eaedacccccb24f'),\n",
+      " '_id': ObjectId('64adf695b45ecde55e1b7369'),\n",
       " 'logo': 'https://en.wikipedia.org/wiki/File:Endeavor_Air_logo.svg'}\n"
      ]
     }
@@ -263,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "290a4287",
    "metadata": {},
    "outputs": [
@@ -271,31 +381,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'': 1,\n",
-      " '_id': ObjectId('64ad8453bf56beaa6df8b15d'),\n",
+      "{'': 0,\n",
+      " '_id': ObjectId('64adf414736ed22a4c026a02'),\n",
       " 'continent': '',\n",
       " 'country_name': 'United States',\n",
-      " 'elevation_ft': 5355.0,\n",
-      " 'gps_code': 'KABQ',\n",
-      " 'home_link': 'http://www.abqsunport.com/',\n",
-      " 'iata_code': 'ABQ',\n",
-      " 'id': 16091.0,\n",
-      " 'ident': 'KABQ',\n",
+      " 'elevation_ft': 1791.0,\n",
+      " 'gps_code': 'KABI',\n",
+      " 'home_link': '',\n",
+      " 'iata_code': 'ABI',\n",
+      " 'id': 3357.0,\n",
+      " 'ident': 'KABI',\n",
       " 'iso_country': 'US',\n",
-      " 'iso_region': 'US-NM',\n",
+      " 'iso_region': 'US-TX',\n",
       " 'keywords': '',\n",
-      " 'last_updated': '2021-11-21T14:58:42+00:00',\n",
-      " 'latitude_deg': 35.040199,\n",
-      " 'local_code': 'ABQ',\n",
-      " 'local_region': 'NM',\n",
-      " 'longitude_deg': -106.609001,\n",
-      " 'municipality': 'Albuquerque',\n",
-      " 'name': 'Albuquerque International Sunport',\n",
-      " 'region_name': 'New Mexico',\n",
+      " 'last_updated': '2011-09-03T02:33:57+00:00',\n",
+      " 'latitude_deg': 32.4113006592,\n",
+      " 'local_code': 'ABI',\n",
+      " 'local_region': 'TX',\n",
+      " 'longitude_deg': -99.6819000244,\n",
+      " 'municipality': 'Abilene',\n",
+      " 'name': 'Abilene Regional Airport',\n",
+      " 'region_name': 'Texas',\n",
       " 'scheduled_service': 1.0,\n",
       " 'score': 500.0,\n",
       " 'type': 'medium_airport',\n",
-      " 'wikipedia_link': 'https://en.wikipedia.org/wiki/Albuquerque_International_Sunport'}\n"
+      " 'wikipedia_link': 'https://en.wikipedia.org/wiki/Abilene_Regional_Airport'}\n"
      ]
     }
    ],
@@ -306,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "cf2e1f2b",
    "metadata": {},
    "outputs": [],
@@ -324,6 +434,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "75d7aa2a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ca87a5a",
    "metadata": {},
    "outputs": [],
    "source": []
